<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature_metric_conversion"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:layout_marginTop="8sp"
        android:weightSum="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginTop="8dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"
            android:autofillHints="David" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature" />

            <Button
                android:id="@+id/btnMetric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric" />

            <Button
                android:id="@+id/btnQuit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quit" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>